prueba de materiales

--- a/templates/pdf_template.html
+++ b/templates/pdf_template.html
@@ -31,7 +31,7 @@
           <img style="float: right;" src="{{ image }}" width="136" height="86" alt="previous" title="Previous" border="0" />
       </div>
     </div>
-    <div class="row" style="border-top:3px solid #7745FF; margin-top: 3px;">
+    <div class="row" style="border-top:3px solid #343A40; margin-top: 3px;">
       <div class="col-md-9">
           <h3 style="float: left;">ORDEN DE TRABAJO </h3>
       </div>
@@ -48,7 +48,7 @@
     
     <div class="row">
       <div class="col-md-12">
-          <div class="alert role="alert" style="background-color: #7745FF; color: white;">
+          <div class="alert role="alert" style="background-color: #343A40; color: white;">
               <h2 class="alert-heading">Orden de trabajo del cliente: <strong>{{cliente}}</strong></h2>
               <h3>Empleado supervisor: {{empleado}}</h3>
               <hr>
@@ -57,7 +57,7 @@
       </div>
     </div>
 
-    <div class="row" style="border-top:3px solid #7745FF; margin-top: 3px;">
+    <div class="row" style="border-top:3px solid #343A40; margin-top: 3px;">
         <div class="col-md-12">
           <h3>Seccion de materiales</h3>
           <table class="table">
@@ -84,7 +84,7 @@
         </div>
       </div>
 
-      <div class="row" style="border-top:3px solid #7745FF; margin-top: 3px;">
+      <div class="row" style="border-top:3px solid #343A40; margin-top: 3px;">
           <div class="col-md-12">
             <h3>Seccion de tareas</h3>
             <table class="table">
@@ -113,7 +113,7 @@
           </div>
         </div>
 
- <div class="row justify-content-center" style="border-top:3px solid #7745FF; margin-top: 3px;">
+ <div class="row justify-content-center" style="border-top:3px solid #343A40; margin-top: 3px;">
           <div class="col-md-12">
               <h2 style="text-align:center;">Costo total de la orden de trabajo</h2>
               <h1 style="text-align:center;"> <strong>${{costo_total}}</strong> </h1>
