pruebas unitarias avanzadas

--- a/templates/pdf_template.html
+++ b/templates/pdf_template.html
@@ -52,6 +52,9 @@
               <h2 class="alert-heading">Orden de trabajo del cliente: <strong>{{cliente}}</strong></h2>
               <h3>Empleado supervisor: {{empleado}}</h3>
               <hr>
+              <h1>Direccion: {{calle +", "+ciudad+" "+", "+estado}}</h1>
+              <h2>codigo postal: {{cp}}</h2>
+              <hr>
               <h1 class="mb-0">Fecha de creacion: {{fecha_de_creacion}} </h1>
             </div>
       </div>
