--- a/templates/pdf_template.html
+++ b/templates/pdf_template.html
@@ -128,12 +128,24 @@
           </div>
         </div>
 
- <div class="row justify-content-center" style="border-top:3px solid #343A40; margin-top: 3px;">
+        <div class="row" style="border-top:3px solid #343A40; margin-top: 3px;">
           <div class="col-md-12">
-              <h2 style="text-align:center;">Costo total de la orden de trabajo</h2>
-              <h1 style="text-align:center;"> <strong>${{costo_total}}</strong> </h1>
+            <h2>Costo total</h2>
+            <table class="table">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col">........</th>
+                    <th scope="col">........</th>
+                    <th scope="col">........</th>
+                    <th scope="col">........</th>
+                    <th scope="col">${{costo_total}}</th>
+                  </tr>
+                </thead>
+              </table>
           </div>
-  </div>
+        </div>
+
+
 
           <!-- Footer -->
           <footer class="page-footer font-small blue">
